src/component/vue-bigdata-table/vue-bigdata-table.less
@prefix: ~"vue-bigdata-table";

.@{prefix}{
    &-outer{
        width: 100%;
        height: 100%;
        overflow: auto;
        border: 1px solid #e9eaec;
        border-top: none;
        box-sizing: border-box;
    }
    width: 100%;
    height: 100%;
    border-top: 1px solid #e9eaec;
    // border-bottom: 1px solid #e9eaec;
    position: relative;
    &-wraper{
        width: 100%;
        height: 100%;
        overflow: auto;
        border-bottom: none;

        .@{prefix}-header-wraper{
            // height: 52px;
            box-sizing: border-box;
            table{
                table-layout: fixed;
                height: 100%;
                tr th{
                    border-right: 1px solid #e9eaec;
                    border-bottom: 1px solid #e9eaec;
                    background: #fff;
                    padding: 0 2px;
                    &:last-child{
                        border-right: none;
                    }
                    .@{prefix}-header-inside-wraper{
                        box-sizing: border-box;
                        padding: 0 8px;
                    }
                }
            }
        }

        &:nth-child(2){
            border-top: 1px solid #e9eaec;
        }
        &:nth-child(4){
            border-bottom: 1px solid #e9eaec;
        }
        .@{prefix}-data-table{
            border-bottom: none;
            border-top: none;
            table-layout: fixed;
            tr{
                td{
                    min-width: 0;
                    height: 48px;
                    box-sizing: border-box;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    vertical-align: middle;
                    border-bottom: 1px solid #e9eaec;
                    border-right: 1px solid #e9eaec;
                    background: #fff;
                    .@{prefix}-cell{
                        box-sizing: border-box;
                        padding: 0 18px;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                        word-break: break-all;
                    }
                    &:last-child{
                        border-right: none;
                    }
                }
            }
            &-left{
                text-align: left;
            }
            &-center{
                text-align: center;
            }
            &-right{
                text-align: right;
            }
        }
    }

    &-fixed{
        .@{prefix}-wraper{
            margin-top: 52px;
            height: ~"calc(100% - 52px)";
        }
        .@{prefix}-header-wraper{
            position: absolute;
            top: 0;
            left: 0;
            box-sizing: border-box;
            // border-bottom: 1px solid #e9eaec;
        }
    }
    
}
.table1 td{
    background: #FFAA51 !important;
}
.table2 td{
    background: yellowgreen !important;
}
.table3 td{
    background: #A0CDFF !important;
}

